use .fixed position with z-index for gif

--- a/radio.css
+++ b/radio.css
@@ -14,7 +14,7 @@ html {
   background-color: #f0f0f0;
   background-image: url(img/disco.jpg);
   background-position: center;
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat; */
   background-size: cover;
 }
 
